--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "jest",
     "start": "node index.js"
   },
-  "engines":{
+  "engines": {
     "node": "16.17.1"
   },
   "author": "vinitdd",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.0",
     "compress": "^0.99.0",
     "compression": "^1.7.4",
